--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <h1>Projects</h1>
         <div style="display: flex">
           <div class="box">
-            <h3>Project1(Tech-Shop)</h3>
+            <h3><a href=" https://mounikakomera.github.io/">Tech shop</a></h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
               quia nobis eligendi reiciendis. Esse a possimus eum est veritatis
