--- a/index.html
+++ b/index.html
@@ -127,7 +127,12 @@
         <h2>Skills</h2>
         <h3>Java, Python, Reactjs</h3>
         <p>Display the logo of all the technologies you know.</p>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/800px-HTML5_logo_and_wordmark.svg.png" alt="html" style="height: 250px;width: 250px;">
+        <img src="https://cdn-icons-png.flaticon.com/512/919/919826.png" alt="css" style="height: 250px;width: 250px;">
+        <img src="https://media.licdn.com/dms/image/v2/D4E12AQFfe1nZbaWdMw/article-cover_image-shrink_720_1280/article-cover_image-shrink_720_1280/0/1698604163003?e=2147483647&v=beta&t=zrcrB8lfoVmZo0LcSLgut3A_4PwE6YFe9EK3iy17L2Y" alt="js" style="height: 250px;width: 450px;">
+        <img src="https://w7.pngwing.com/pngs/403/269/png-transparent-react-react-native-logos-brands-in-colors-icon-thumbnail.png" alt="reactjs" style="height: 250px;width: 250px;">
       </div>
+      
       <div
         id="contact"
         class="row"
